Refs #142573 - Fix header on smaller screens.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1331,12 +1331,14 @@ div.ui.modal.facet {
   }
 
   div.sui-layout-header {
-    div.header-columns {
+    div.ui.container.stackable.two.column.grid.header-columns {
       div.col-left {
+        padding-left: 0px !important;
         text-align: left !important;
       }
 
       div.col-mid {
+        padding-right: 2rem !important;
         padding-left: 0px !important;
 
         h2 {
